k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${AZURE_DEPLOYMENT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${AZURE_APP_NAME}
  template:
    metadata:
      labels:
        app: ${AZURE_APP_NAME}
    spec:
      containers:
        - name: ${AZURE_CONTAINER_NAME}
          image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
          ports:
            - containerPort: 3000
            - containerPort: 50000
            - containerPort: 11975
