k8s/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${AZURE_BROWSERLESS_SERVICE_NAME}
spec:
  selector:
    app: ${AZURE_APP_NAME}
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: websocket
      port: 50000
      targetPort: 50000
    - name: additional
      port: 11975
      targetPort: 11975
  type: ClusterIP
