k8s/service-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless-websocket
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "${AZURE_RESOURCE_GROUP}"
    service.beta.kubernetes.io/azure-pip-name: "${AZURE_WS_INGRESS_IP_NAME}"
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      targetPort: 50000
      protocol: TCP
      name: websocket
  selector:
    app: ${AZURE_CONTAINER_NAME}
